# google_workspace_fastmcp2

./: .cursorrules  .dockerignore  .email_allowlist.example  .env.cloud.example  .env.cloudflare.template  .env.example  .env.local.example  .gitignore  .rooignore  .roomodes  .user_api_key_link_metadata.json  .user_api_keys.json  AGENT.MD  AGENTS.md  BUG_REPORT_SESSION_EMAIL_MISMATCH.md  BUG_REPORT_VALIDATION_AGENT_STRUCTURED_OUTPUT.md  CLAUDE.md  Dockerfile  LICENSE  README.md  __init__.py  _test_resource_template.py  cloudflare-tunnel-config.yml  docker-compose.test.yml  docker-compose.yml  fastmcp.json  fastmcpredis.md  glama.json  previous_attempt.txt  pyproject.toml  requirements.lock.txt  requirements.txt  run_tests.sh  server.py  validate_fixes.py
.github/: copilot-instructions.md
adapters/: MODULE_WRAPPER_DIAGRAMS.md  README_MODULE_WRAPPER.md  __init__.py  adapter_factory.py  adapter_registry.py  adapter_types.py  base_api.py  discovery_manager.py  domain_config.py  module_wrapper.py  module_wrapper_example.py  module_wrapper_mcp.py  structure_validator.py  symbol_generator.py  test_module_wrapper.py  text_indexing.py
auth/: __init__.py  access_control.py  alpha_gating.py  audit.py  compatibility_shim.py  context.py  credential_bridge.py  dual_auth_bridge.py  dual_oauth_provider.py  dynamic_client_registration.py  fastmcp_oauth_endpoints.py  github_provider.py  google_auth.py  google_oauth_auth.py  jwt_auth.py  mcp_auth_middleware.py  middleware.py  oauth_proxy.py  pkce_utils.py  scope_registry.py  secure_middleware.py  secure_server_integration.py  security_patch.py  service_dispatcher.py  service_helpers.py  service_manager.py  service_types.py  session_bridge.py  sso_google_provider.py  token_validator.py  types.py  ui.py  unified_session.py  user_api_keys.py
config/: __init__.py  embedding_service.py  enhanced_logging.py  fastmcp_compat.py  model_artifacts.py  qdrant_client.py  qdrant_docker.py  settings.py
data/: remove_sampling_costs.json  sampling_costs.json
docs/: CONTRIBUTING.md  NEXT_STEPS_2026-04-05.md  OAUTH_CLIENT_SETUP.md  OAuth_Authentication_Explained.md  PR37_MERGE_COMMENT.md  PR37_REVIEW_GUIDE.md  RELEASE_v2.0.0.md  RESOURCE_TEMPLATING_MIGRATION.md  SESSION_2026-03-31_MCP_UI_AND_FIXES.md  SMART_CARD_BUILDER_ARCHITECTURE.md  TRM_MW_ARCHITECTURE.md  __init__.py  doc_template_helper.py  docs_tools.py  docs_types.py  payment_model_architecture.md  qdrant_text_indexing_strategy.md  utils.py
documentation/: BFG_CLEANUP_GUIDE.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  ENHANCED_TEMPLATE_MIDDLEWARE_V3.md  Google_Service_Resource_Metadata.md  IMPLEMENTATION_COMPLETE.md  RETROSPECTIVE.md  STRUCTURED_RESPONSE_INTEGRATION_GUIDE.md  STRUCTURED_RESPONSE_MIGRATION_ANALYSIS.md  STRUCTURED_RESPONSE_TRANSFORMER_REPORT.md  TEMPLATE_INTEGRATION_GUIDE.md  TEMPLATE_PARAMETER_MIDDLEWARE.md  auth_pattern_improvement_guide.md  context_migration_strategy.md  dupe_tools.md  google_oauth_https_fix.md  oauth_flow_reconciliation.md  oauth_migration_plan.md  phase1_oauth_migration_complete.md  qdrant_deduplication_fix.md
drive/: __init__.py  auth_models.py  drive_enums.py  drive_search_types.py  drive_tools.py  drive_types.py  file_management_tools.py  file_management_types.py  test_search_examples.py  upload_staging.py  upload_tools.py  upload_types.py  utils.py
examples/: enhanced_gmail_prompts_demo.py  enhanced_service_list_examples.py  gmail_prompts_with_jinja2.py  template_integration_example.py  test_enhanced_resources.py
forms/: __init__.py  forms_tools.py  forms_types.py
gcalendar/: __init__.py  calendar_tools.py  calendar_tools_backup.py  calendar_types.py
gchat/: CARD_FIXES_DOCUMENTATION.md  CARD_SYSTEM.md  CARD_TEMPLATE_SYSTEM.md  README_SMART_CARD_API.md  README_UNIFIED_CARD_TOOL.md  TOOL_SCHEMA_MOCKUP.md  __init__.py  card_delivery.py  card_framework_wrapper.py  card_tools.py  card_types.py  chat_app_prompts.py  chat_app_tools.py  chat_cards_optimized.py  chat_tools.py  chat_types.py  dynamic_registry.py  enhanced_card_tool.py  feedback_loop.py  icon_search.py  jwt_chat_tools.py  material_icons.py  nlp_card_parser.py  smart_card_builder.py  smart_card_builder_v2.py  smart_card_tool.py  structure_dsl.py  template_component.py  unified_card_tool.py  unified_card_types.py  wrapper_api.py  wrapper_dag.py  wrapper_setup.py
gmail/: __init__.py  allowlist.py  attachment_server.py  compose.py  email_builder.py  email_wrapper_api.py  email_wrapper_setup.py  filters.py  gmail_tools.py  gmail_types.py  labels.py  messages.py  mjml_types.py  mjml_wrapper.py  service.py  template_tools.py  templates.py  temptools.py  test.html  ui_tools.py  utils.py
google-workspace-automation 4/: SKILL.md
lifespans/: __init__.py  server_lifespans.py
middleware/: __init__.py  cache_keepalive.py  common_types.py  dashboard_cache_middleware.py  langfuse_integration.py  litellm_sampling_handler.py  mcp_metadata_handler.py  namespace_converter.py  otel_setup.py  profile_enrichment_middleware.py  qdrant_enhanced.py  qdrant_middleware.py  qdrant_response.py  qdrant_simple_tools.py  qdrant_types.py  qdrant_unified.py  qdrant_wrapper.py  routing_helper.py  sampling_cache.py  sampling_middleware.py  server_middleware_setup.py  service_list_response.py  session_sampling_handler.py  session_tool_filtering_middleware.py  structured_response_middleware.py  tag_based_resource_middleware.py  template_middleware.py  template_middleware_v2.py  token_store.py
people/: __init__.py  people_tools.py  people_types.py
photos/: README.md  __init__.py  advanced_tools.py  optimized_client.py  photos_tools.py  photos_types.py
prompts/: Calendar Event Enricher.md  __init__.py  chat_app_prompts.py  gchat_prompts.py  github_notifications_summary.md  gmail_prompts.py  gmail_showcase_prompts.py  gsheets_prompts.py  (+2 more)
research/trm/poc/: README.md  pyproject.toml  recursive_search.py  ric_vectors.py
research/trm/poc/evaluation/: accuracy.py  convergence.py
research/trm/poc/games/: __init__.py  base.py  connect4.py  mancala.py  tictactoe.py
research/trm/poc/tests/: test_recursive.py
(+607 files in other folders)
